updated the side bar links and updated the profit-loss table structure

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5575,11 +5575,11 @@ select option:not(:first-child) {
 }
 
 .trial_print_table_header {
-    padding: 22px 53px;
+    padding: 22px clamp(16px, 4vw, 53px);
 }
 
 .trail_print_table_container .print-body {
-    padding: 24px 53px 24px 53px;
+    padding: 24px clamp(16px, 4vw, 53px) 24px clamp(16px, 4vw, 53px) ;
     border-top: 1px solid var(--Menu-Separator, #C2C2C2);
     border-bottom: 1px solid var(--Menu-Separator, #C2C2C2);
 }
@@ -5606,7 +5606,7 @@ select option:not(:first-child) {
 }
 
 .trail_print_footer {
-    padding: 24px 53px 0 53px;
+    padding: 24px clamp(20px, 4vw, 53px) 0 clamp(20px, 4vw, 53px);
 }
 
 .trail_print_footer p {
@@ -6056,6 +6056,13 @@ select option:not(:first-child) {
         margin-bottom: 0;
         padding-bottom: 0;
     }
+    .trial_print_table_header {
+        display: flex;
+        flex-direction: row !important;
+    }
+    .last_trail_print_header_div{
+        text-align: end !important;
+    }
 }
 
 
@@ -6259,6 +6266,12 @@ select option:not(:first-child) {
 
     .change_ledger_group_popup_content {
         width: 100%;
+    }
+    .trial_print_table_header {
+        flex-direction: column;
+    }
+    .last_trail_print_header_div{
+        text-align: center;
     }
 
 }
