--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6025,6 +6025,9 @@ select option:not(:first-child) {
         font-weight: 400;
         color: var(--text-dark);
     }
+    .open_trail_table .trail_table_heading{
+        font-size: 12px;
+    }
 
     .backup_table .action {
         display: none;
