--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1367,19 +1367,23 @@ SIDE BAR CSS ENDS
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    height: 100%;
+    width: 100%;
 }
 
 .preview .file-item {
-    padding: 6px 10px;
-    border: 1px solid #ddd;
+    /* padding: 6px 10px; */
+    /* border: 1px solid #ddd; */
     border-radius: 6px;
     background: #fafafa;
     font-size: 14px;
+    height: 100%;
+    width: 100%;
 }
 
 .preview img {
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -5685,6 +5689,39 @@ select option:not(:first-child) {
     height: 30px;
     object-fit: cover;
     border-radius: 30px;
+}
+
+.common_employee_bg {
+    background-color: var(--white);
+    border-radius: 18px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.15);
+}
+.common_employee_bg .content{
+    padding: 20px;
+}
+.common_employee_bg .heading{
+    border-bottom: 1px solid var(--Neutral-Separator, #EBEBEB);
+    padding: 12px 20px;
+    position: relative;
+}
+.common_employee_bg .heading::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    height: 22px;
+    background-color: var(--primary-color);
+    width: 3px;
+    border-radius: 3px;
+}
+.common_employee_bg .heading h3 {
+    color: var(--text-dark2, #141414);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0;
 }
 
 /* ****************** EMPLOYEE PAGE CSS ENDS******************* */
