--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4505,11 +4505,15 @@ select option:not(:first-child) {
     background-color: #F5F5F5;
     border-radius: 16px;
     padding: 4px;
+    width: max-content;
 }
 
 .delete_inner_content_container {
     padding: 16px 24px 24px 24px;
     width: 380px;
+    box-shadow: 0px 0px 2px var(--common-pupbg);
+    border-radius: 16px;
+    border: 1px solid var(--active-bg);
 }
 
 .del_image {
@@ -6466,5 +6470,10 @@ select option:not(:first-child) {
 
     .live_Data_container {
         width: 100%;
+    }
+}
+@media (max-width: 420px) {
+    .delete_inner_content_container{
+        width: 320px;
     }
 }
