--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6056,6 +6056,22 @@ select option:not(:first-child) {
     background: #F7EEF9;
 }
 
+.row_Del_Btn {
+    display: flex;
+    width: 25px;
+    height: 29px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #DE2E2E;
+    cursor: pointer;
+}
+
+.row_Del_Btn:hover {
+    background: #bc2121;
+}
+
 /* ======================= LEAVE PAGE CSS ENDS ====================== */
 
 /* setting icon css  */
@@ -6068,7 +6084,7 @@ select option:not(:first-child) {
     height: 40px;
     border-bottom-left-radius: 20px;
     border-top-left-radius: 20px;
-    z-index: 999;
+    z-index: 100;
     cursor: pointer;
     background-color: var(--neutral-primay);
     border: 1px solid var(--neutral-primay);
