--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7043,7 +7043,8 @@ select option:not(:first-child) {
         width: 80px;
     }
 
-    .admin_list_heading .left_heading h3, .Common_vouchar_data_container .inner_content .main_heading .left h3{
+    .admin_list_heading .left_heading h3,
+    .Common_vouchar_data_container .inner_content .main_heading .left h3 {
         font-size: 20px;
         margin-bottom: 5px;
     }
@@ -7051,7 +7052,8 @@ select option:not(:first-child) {
     .chart_bread_crump .bread_crump_content p {
         font-size: 16px;
     }
-    .pb36{
+
+    .pb36 {
         padding-bottom: 16px;
     }
 }
